Refactor tableau.html and main.css: Remove unused styles and clean up Tableau page structure for improved maintainability

--- a/pages/tableau.html
+++ b/pages/tableau.html
@@ -175,47 +175,28 @@
       </div>
     </div>
     <div id="main" role="main">
-      <article class="page page--tableau" itemscope
-        itemtype="http://schema.org/CreativeWork">
         <meta itemprop="description" content="About me" />
         <div class="page__inner-wrap">
           <header></header>
-          <section class="page__content" itemprop="text">
-            <head>
-              <style>
-                p {
-                  color: black;
-                  text-align: left;
-                  letter-spacing: 0.015em;
-                  word-spacing: 0.001em;
-                  font-weight: 430;
-                  margin-bottom: 1.5em;
-                  margin-top: 0em;
-                  line-height: 1.3;
-                }
-              </style>
-            </head>
+          <br class="page__content" itemprop="text">
             <h2>Tableau Public Portfolio</h2>
-
-            <div class="tableauPlaceholder" id="viz1761839611950"
-              style="position: relative">
+            <br>
+            <div class="tableauPlaceholder" id="viz1761860533300">
               <noscript><a href="#"><img
                     alt="British Airways "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Br&#47;BritishAirwaysDashboard_17615028723800&#47;BritishAirways&#47;1_rss.png"
-                    style="border: none" /></a></noscript><object
-                class="tableauViz" style="display: none">
+                    src="https://public.tableau.com/static/images/Br/BritishAirwaysDashboard_17615028723800/BritishAirways/1_rss.png" /></a></noscript>
+              <object class="tableauViz">
                 <param name="host_url"
                   value="https%3A%2F%2Fpublic.tableau.com%2F" />
                 <param name="embed_code_version" value="3" />
                 <param name="site_root" value />
-                <param
-                  name="name"
-                  value="BritishAirwaysDashboard_17615028723800&#47;BritishAirways" />
+                <param name="name"
+                  value="BritishAirwaysDashboard_17615028723800/BritishAirways" />
                 <param name="tabs" value="no" />
                 <param name="toolbar" value="yes" />
                 <param
                   name="static_image"
-                  value="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Br&#47;BritishAirwaysDashboard_17615028723800&#47;BritishAirways&#47;1.png" />
+                  value="https://public.tableau.com/static/images/Br/BritishAirwaysDashboard_17615028723800/BritishAirways/1.png" />
                 <param name="animate_transition" value="yes" />
                 <param name="display_static_image" value="yes" />
                 <param name="display_spinner" value="yes" />
@@ -226,18 +207,13 @@
             </div>
             <script type="text/javascript">
               (function () {
-<<<<<<< HEAD
-                var originalW = 1200, originalH = 727;
-=======
-                var originalW = 1600,
+                var originalW = 1200,
                   originalH = 727;
->>>>>>> b8cc4ce61c0179ac0d6b7b27157f31f9edc4be60
                 var ratio = originalH / originalW;
-                var divElement = document.getElementById("viz1761839611950");
+                var divElement = document.getElementById("viz1761860533300");
                 var vizElement = divElement.getElementsByTagName("object")[0];
                 var containerWidth = divElement.offsetWidth;
                 var refWidth = Math.min(containerWidth, originalW);
-                // Use pixel width when container can accommodate original size, otherwise fluid 100%
                 if (refWidth === originalW) {
                   vizElement.style.width = originalW + "px";
                 } else {
@@ -249,14 +225,12 @@
                 vizElement.style.height = Math.max(300, Math.round(refWidth * ratio)) + "px";
               })();
             </script>
-
-            <div class="tableauPlaceholder" id="viz1761839572870"
-              style="position: relative">
+            <br>
+            <div class="tableauPlaceholder" id="viz1761839572870">
               <noscript><a href="#"><img
                     alt="Sales Dashboard "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sa&#47;SalesCustomerDashboards_17617785097160&#47;SalesDashboard&#47;1_rss.png"
-                    style="border: none" /></a></noscript><object
-                class="tableauViz" style="display: none">
+                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Sa&#47;SalesCustomerDashboards_17617785097160&#47;SalesDashboard&#47;1_rss.png" /></a></noscript><object
+                class="tableauViz">
                 <param name="host_url"
                   value="https%3A%2F%2Fpublic.tableau.com%2F" />
                 <param name="embed_code_version" value="3" />
@@ -279,12 +253,8 @@
             </div>
             <script type="text/javascript">
               (function () {
-<<<<<<< HEAD
-                var originalW = 1200, originalH = 827;
-=======
-                var originalW = 1600,
-                  originalH = 1000;
->>>>>>> b8cc4ce61c0179ac0d6b7b27157f31f9edc4be60
+                var originalW = 1200,
+                  originalH = 827;
                 var ratio = originalH / originalW;
                 var divElement = document.getElementById("viz1761839572870");
                 var vizElement = divElement.getElementsByTagName("object")[0];
@@ -301,14 +271,12 @@
                 vizElement.style.height = Math.max(300, Math.round(refWidth * ratio)) + "px";
               })();
             </script>
-
-            <div class="tableauPlaceholder" id="viz1761839559260"
-              style="position: relative">
+            <br>
+            <div class="tableauPlaceholder" id="viz1761839559260">
               <noscript><a href="#"><img
                     alt="Nationwide Home Builder "
-                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FictionalNationalHomebuilder&#47;NationwideHomeBuilder&#47;1_rss.png"
-                    style="border: none" /></a></noscript><object
-                class="tableauViz" style="display: none">
+                    src="https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Fi&#47;FictionalNationalHomebuilder&#47;NationwideHomeBuilder&#47;1_rss.png" /></a></noscript><object
+                class="tableauViz">
                 <param name="host_url"
                   value="https%3A%2F%2Fpublic.tableau.com%2F" />
                 <param name="embed_code_version" value="3" />
@@ -330,12 +298,8 @@
             </div>
             <script type="text/javascript">
               (function () {
-<<<<<<< HEAD
-                var originalW = 1200, originalH = 827;
-=======
-                var originalW = 1600,
-                  originalH = 1000;
->>>>>>> b8cc4ce61c0179ac0d6b7b27157f31f9edc4be60
+                var originalW = 1200,
+                  originalH = 827;
                 var ratio = originalH / originalW;
                 var divElement = document.getElementById("viz1761839559260");
                 var vizElement = divElement.getElementsByTagName("object")[0];
@@ -353,32 +317,6 @@
               })();
             </script>
 
-            <script type="text/javascript">
-              (function () {
-                var ratio = 927 / 1600; // original large width/height ratio
-                var divElement = document.getElementById("viz1761785356118");
-                var vizElement = divElement.getElementsByTagName("object")[0];
-                var width = divElement.offsetWidth;
-                vizElement.style.width = "100%";
-                vizElement.style.height = Math.max(300, Math.round(width * ratio)) + "px";
-              })();
-            </script>
-            <script type="text/javascript">
-              (function () {
-<<<<<<< HEAD
-                var ratio = 827 / 1200; // original large width/height ratio
-=======
-                var originalW = 1600,
-                  originalH = 1000;
-                var ratio = originalH / originalW;
->>>>>>> b8cc4ce61c0179ac0d6b7b27157f31f9edc4be60
-                var divElement = document.getElementById("viz1761780253443");
-                var vizElement = divElement.getElementsByTagName("object")[0];
-                var width = divElement.offsetWidth;
-                vizElement.style.width = "100%";
-                vizElement.style.height = Math.max(300, Math.round(width * ratio)) + "px";
-              })();
-            </script>
             <script>
               ga("require", "ipMeta", {
                 serviceProvider: "dimension1",
